# audio-plugin-dnd

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: backend.rs  data_device.rs  file_payload.rs  foreign.rs  lib.rs  platform.rs  plugin.rs  preview_render.rs  queue.rs  request.rs  runtime.rs  state.rs
src/backend/: dnd.rs  linux.rs  macos.rs  windows.rs
src/backend/linux/: mime.rs  plugin_windows.rs  portal.rs  router.rs  target.rs  wayland_native.rs
