[package]
name = "audio-plugin-dnd"
version = "0.1.1"
edition = "2021"
rust-version = "1.75"
description = "Drag-and-drop protocol helpers for Rust audio plugin GUIs"
license = "ISC"
readme = "README.md"
repository = "https://github.com/DerpcatMusic/audio-plugin-dnd"
documentation = "https://docs.rs/audio-plugin-dnd"
keywords = ["audio", "plugins", "dnd", "wayland", "gui"]
categories = ["gui", "os::linux-apis"]
include = [
    "CHANGELOG.md",
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/**/*.rs",
]

[dependencies]
percent-encoding = "2.3"
raw-window-handle = "0.5"
smithay-client-toolkit = { version = "0.20.0", default-features = false, features = ["calloop"] }
wayland-client = { version = "0.31.14", features = ["system"] }
wayland-sys = { version = "0.31.11", features = ["client", "dlopen", "libwayland_client_1_23"] }
