[package]
name = "audio-plugin-dnd"
version = "0.1.3"
edition = "2021"
rust-version = "1.75"
description = "Drag-and-drop protocol helpers for Rust audio plugin GUIs"
license = "ISC"
readme = "README.md"
repository = "https://github.com/DerpcatMusic/audio-plugin-dnd"
documentation = "https://docs.rs/audio-plugin-dnd"
keywords = ["audio", "plugins", "dnd", "wayland", "gui"]
categories = ["gui", "os::linux-apis"]
include = [
    "CHANGELOG.md",
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/**/*.rs",
]

[features]
default = []
nice-log = []
tracing = []

[dependencies]
percent-encoding = "2.3"
raw-window-handle = "0.5"

[target.'cfg(all(target_family = "unix", not(target_os = "macos")))'.dependencies]
serde_json = "1.0"
smithay-client-toolkit = { version = "0.20.0", default-features = false, features = ["calloop"] }
wayland-client = { version = "0.31.14", features = ["system"] }
wayland-sys = { version = "0.31.11", features = ["client", "dlopen", "libwayland_client_1_23"] }
x11rb = { version = "0.13", features = ["randr"] }
zbus = { version = "5.12", default-features = false, features = ["async-io", "blocking-api"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-core = "=0.62.2"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "=0.62.2"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_SystemServices",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies.objc2-app-kit]
version = "0.3"
default-features = false
features = [
    "NSApplication",
    "NSDragging",
    "NSDraggingItem",
    "NSDraggingSession",
    "NSEvent",
    "NSPasteboard",
    "NSPasteboardItem",
    "NSResponder",
    "NSView",
    "NSWindow",
]

[target.'cfg(target_os = "macos")'.dependencies.objc2-foundation]
version = "0.3"
default-features = false
features = [
    "NSArray",
    "NSGeometry",
    "NSObject",
    "NSString",
    "NSURL",
    "objc2-core-foundation",
]
